# Jenkins_Notification_App

./: Cargo.toml  LICENSE  README.md  build.rs  tray-example.rc
src/: builds.txt  builds_info_checker.rs  change_handler.rs  fail_handler.rs  gui.rs  jenkins_api.rs  main.rs  notification.rs  tray.rs
ui/: app-window.slint
