[package]
name = "JenkinsWidget"
version = "0.1.0"
edition = "2024"

[dependencies]
notify-rust = "4"
chrono = "0.4.41"
dotenv = "0.15"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.41"